--- a/index.css
+++ b/index.css
@@ -8,6 +8,10 @@
     background-color: bisque;
     width: 100vw;
     height: 7vh;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding-left: 10vw;
 }
 
 #main-container {
@@ -24,12 +28,15 @@
     height: 7vh;
     width: 100vw;
     background-color: bisque;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #game-container {
     display: grid;
-    width: 50vh;
-    height: 50vh;
+    width: 40vw;
+    height: 40vw;
     gap: 0;
 }
 
@@ -39,10 +46,18 @@
 }
 #buttons>button {
     margin-block: 2vh;
+    width: 20vw;
+    padding: 1vw;
+    border-radius: 5px
 }
 
 .game-tile {
     background-color: white;
     text-align: center;
-    border: 0.5px solid red;
+}
+
+#select-ink-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
